# ctpgo

./: Makefile  README.md  go.mod  go.sum  libctpgo.go  main.go
lib/: Makefile  ctpgo.swigcxx  ctpgo_swigcxx.i  libctpgo.go
lib/cmake/: CMakeLists.txt
lib/linux64/: ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
src/: README.md  common.go  ctpgo.go  map.go  md.go  trader.go
strategy/: ctp_md.go  ctp_trader.go  kline.go  strategy.go  strategy_double_ema.go  strategy_supertrend.go  types.go
utils/: common.go
